AWS/ABI/4-internetGateway.tf
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.hiebah_VPC.id

  tags = {
    Name = "gateway"
  }
}
